[package]
name = "item-write"
version = "0.1.0"
edition = "2024"

[dependencies]
item-core = { git = "https://github.com/blitzfilter/item-core", branch = "main" }
aws-sdk-dynamodb = { version = "1.72.0" }
serde_dynamo = { version = "4.2.14"}

[dev-dependencies]
test-api = { git = "https://github.com/blitzfilter/test-api", branch = "main" }
item-read = { git = "https://github.com/blitzfilter/item-read", branch = "main" }
tokio = { version = "1", features = ["full"] }
serial_test = "3.2.0"